tests/baselines/reference/parserComputedPropertyName6.errors.txt
parserComputedPropertyName6.ts(1,12): error TS2304: Cannot find name 'e'.
parserComputedPropertyName6.ts(1,20): error TS2304: Cannot find name 'e'.
parserComputedPropertyName6.ts(1,24): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName6.ts (3 errors) ====
    var v = { [e]: 1, [e + e]: 2 };
               ~
!!! error TS2304: Cannot find name 'e'.
                       ~
!!! error TS2304: Cannot find name 'e'.
                           ~
!!! error TS2304: Cannot find name 'e'.